skip ToDoFxApplicationTest for now